# ExternalClient-Base

./: CMakeLists.txt  README.md
src/: main.cpp
src/fonts/: IconsFontAwesome6.h
src/hooks/: hook.cpp  hook.hpp
src/math/: vector2.hpp  vector3.hpp
src/render/: imgui_layer.cpp  imgui_layer.hpp
src/ui/: menu.cpp  menu.hpp
